--- a/.github/workflows/backup-neon.yml
+++ b/.github/workflows/backup-neon.yml
@@ -7,10 +7,7 @@ on:
   workflow_dispatch:  # Permet de lancer manuellement
 
 env:
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  REGION: ${{ vars.GCP_REGION }}
-  BACKUP_BUCKET: ${{ vars.BACKUP_BUCKET || 'budget-app-backups' }}
-  DATABASE_URL_SECRET: ${{ vars.DATABASE_URL_SECRET }}
+  BACKUP_BUCKET: ${{ vars.BACKUP_BUCKET || 'bikininjas-budget-app-backups' }}
 
 jobs:
   backup:
@@ -22,10 +19,7 @@ jobs:
       id-token: write
 
     steps:
-      - uses: actions/checkout@v4
-
       - name: Google Auth
-        id: auth
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCS_GH_SVC_ACCOUNT_JSON_KEY }}
@@ -33,47 +27,29 @@ jobs:
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Install PostgreSQL Client 17
+      - name: Get Database URL from Secret Manager
+        id: get-db-url
         run: |
+          DB_URL=$(gcloud secrets versions access latest --secret="${{ vars.DATABASE_URL_SECRET }}")
+          echo "::add-mask::$DB_URL"
+          echo "DATABASE_URL=$DB_URL" >> $GITHUB_ENV
+
+      - name: Create PostgreSQL Backup
+        run: |
+          # Installer PostgreSQL client 17
           sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
           sudo apt-get update
           sudo apt-get install -y postgresql-client-17
-
-      - name: Get Database URL from Secret Manager
-        id: get-db-url
-        run: |
-          DB_URL=$(gcloud secrets versions access latest --secret="${{ env.DATABASE_URL_SECRET }}")
-          echo "::add-mask::$DB_URL"
-          echo "DATABASE_URL=$DB_URL" >> $GITHUB_ENV
-
-      - name: Create Backup
-        run: |
+          
+          # Créer le backup
           TIMESTAMP=$(date +%Y%m%d_%H%M%S)
-          BACKUP_FILE="neon_backup_${TIMESTAMP}.sql"
+          BACKUP_FILE="neon_backup_${TIMESTAMP}.sql.gz"
           
           echo "Creating backup: $BACKUP_FILE"
           
-          # Convertir postgresql+asyncpg:// en postgresql:// si nécessaire
-          PGDUMP_URL="${DATABASE_URL}"
-          PGDUMP_URL="${PGDUMP_URL//postgresql+asyncpg:\/\//postgresql:\/\/}"
-          
-          # Nettoyer les paramètres SSL invalides (?ssl sans valeur)
-          # et remplacer par le format correct pour pg_dump
-          PGDUMP_URL="${PGDUMP_URL//\?ssl/\?sslmode=require}"
-          PGDUMP_URL="${PGDUMP_URL//\&ssl/\&sslmode=require}"
-          
-          # Ajouter sslmode=require si aucun paramètre SSL n'est présent
-          if [[ ! "$PGDUMP_URL" =~ sslmode ]]; then
-            if [[ "$PGDUMP_URL" =~ \? ]]; then
-              PGDUMP_URL="${PGDUMP_URL}&sslmode=require"
-            else
-              PGDUMP_URL="${PGDUMP_URL}?sslmode=require"
-            fi
-          fi
-          
-          echo "Running pg_dump..."
-          pg_dump "${PGDUMP_URL}" -f "${BACKUP_FILE}"
+          # Utiliser pg_dump avec compression directe
+          pg_dump "${DATABASE_URL}" | gzip > "${BACKUP_FILE}"
           
           # Vérifier que le backup a été créé
           if [ ! -f "${BACKUP_FILE}" ]; then
@@ -82,37 +58,26 @@ jobs:
           fi
           
           echo "✅ Backup created successfully ($(du -h ${BACKUP_FILE} | cut -f1))"
-          
-          # Compresser le backup
-          gzip "${BACKUP_FILE}"
-          echo "✅ Backup compressed ($(du -h ${BACKUP_FILE}.gz | cut -f1))"
-          
-          echo "BACKUP_FILE=${BACKUP_FILE}.gz" >> $GITHUB_ENV
+          echo "BACKUP_FILE=${BACKUP_FILE}" >> $GITHUB_ENV
 
       - name: Upload to Google Cloud Storage
         run: |
           BUCKET_PATH="gs://${{ env.BACKUP_BUCKET }}/neon/$(date +%Y/%m)/"
           
           echo "Uploading to: $BUCKET_PATH"
-          gsutil cp "$BACKUP_FILE" "$BUCKET_PATH"
+          gsutil cp "${BACKUP_FILE}" "${BUCKET_PATH}"
           
-          echo "✅ Backup uploaded successfully"
+          echo "✅ Backup uploaded: ${BUCKET_PATH}${BACKUP_FILE}"
 
       - name: Cleanup Old Backups (Keep 30 days)
         run: |
-          CUTOFF_DATE=$(date -d '30 days ago' +%Y%m%d)
+          CUTOFF_DATE=$(date -d '30 days ago' +%Y-%m-%d)
           echo "Removing backups older than $CUTOFF_DATE"
           
-          gsutil ls -r "gs://${{ env.BACKUP_BUCKET }}/neon/**/*.sql.gz" | while read file; do
-            FILE_DATE=$(echo "$file" | grep -oP '\d{8}' | head -1)
-            if [ ! -z "$FILE_DATE" ] && [ "$FILE_DATE" -lt "$CUTOFF_DATE" ]; then
-              echo "Deleting old backup: $file"
-              gsutil rm "$file" || true
-            fi
-          done
-
-      - name: Notify on Failure
-        if: failure()
-        run: |
-          echo "❌ Backup failed at $(date)"
-          echo "Check GitHub Actions logs for details"
+          # Liste tous les backups et supprime ceux de plus de 30 jours
+          gsutil ls -l "gs://${{ env.BACKUP_BUCKET }}/neon/**/*.sql.gz" | \
+            awk '{if($2 < "'$CUTOFF_DATE'") print $3}' | \
+            grep -v '^$' | \
+            xargs -r -I {} gsutil rm {} || echo "No old backups to delete"
+          
+          echo "✅ Cleanup completed"
